Minor changes to styling on the login page to correctly display errors above the login form, as well as changes to the admin page to stop user list from overflowing on to the footer.

--- a/public/styles.css
+++ b/public/styles.css
@@ -9,10 +9,6 @@ body {
 }
 
 main {
-    height: auto;
+    flex: 1;
     margin-bottom: 3rem;
-}
-
-footer {
-    padding: 1em;
 }
